--- a/inventory/00-static/ocp-prod.yaml
+++ b/inventory/00-static/ocp-prod.yaml
@@ -41,3 +41,67 @@ all:
                 wrk-21.nerc-ocp-prod.rc.fas.harvard.edu:
                 wrk-22.nerc-ocp-prod.rc.fas.harvard.edu:
                 wrk-23.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-24.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-25.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-26.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-27.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-28.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-29.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-30.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-31.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-32.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-33.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-34.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-35.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-36.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-37.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-38.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-39.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-40.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-41.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-42.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-43.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-44.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-45.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-46.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-47.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-48.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-49.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-50.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-51.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-52.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-53.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-54.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-55.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-56.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-57.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-58.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-59.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-60.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-61.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-62.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-63.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-64.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-65.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-66.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-67.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-68.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-69.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-70.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-71.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-72.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-73.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-74.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-75.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-76.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-77.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-78.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-79.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-80.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-81.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-82.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-83.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-84.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-85.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-86.nerc-ocp-prod.rc.fas.harvard.edu:
+                wrk-87.nerc-ocp-prod.rc.fas.harvard.edu:
