Add playbook to gather inventory information via redfish

--- a/inventory/00-static/ocp-infra.yaml
+++ b/inventory/00-static/ocp-infra.yaml
@@ -3,6 +3,8 @@ all:
     nerc_ocp:
       children:
         nerc_ocp_infra:
+          vars:
+            cluster_name: nerc-ocp-infra
           children:
             nerc_ocp_infra_controllers:
               vars:
